crates/aura-core/tests/ui/authoritative_lifecycle_without_capability.stderr
error[E0308]: mismatched types
  --> tests/ui/authoritative_lifecycle_without_capability.rs:10:9
   |
 9 |     let mut context = issue_operation_context(
   |                       ----------------------- arguments to this function are incorrect
10 |         &raw,
   |         ^^^^ expected `&OperationContextCapability`, found `&CapabilityKey`
   |
   = note: expected reference `&OperationContextCapability`
              found reference `&CapabilityKey`
note: function defined here
  --> src/ownership.rs
   |
   | pub fn issue_operation_context<OperationId, InstanceId, Trace>(
   |        ^^^^^^^^^^^^^^^^^^^^^^^
